expose adding private peers
